Bug 259702 - Workweek view does not swipe in workweeks
Summary: Workweek view does not swipe in workweeks
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-13 11:41 UTC by Björn Balazs
Modified: 2011-01-19 11:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Balazs 2010-12-13 11:41:29 UTC
Version:           unspecified (using Devel) 
OS:                Linux

When opening a workweekview it correctly shows Monday to Friday. When the user now swipes the view, it does not change to next Monday to Friday, but instead shows the next 5 days (aka Sat to Wed). Please fix this behaviour.

Reproducible: Always
Comment 1 Tobias Koenig 2010-12-14 14:10:21 UTC
SVN commit 1206455 by tokoe:

Always go backward/forward 7 days for work weeks

BUG: 259702


 M  +4 -2      agendaviewitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206455