Always go backward/forward 7 days for work weeks

BUG: 259702

svn path=/trunk/KDE/kdepim/mobile/; revision=1206455